@@ -1,37 +1,42 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         LEOCHARRE-Dev
-version:      1.08
-version_from: lib/LEOCHARRE/Dev.pm
-installdirs:  site
+--- #YAML:1.0
+name:               LEOCHARRE-Dev
+version:            1.09
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    AppConfig::Std:                1.07
-    Bogus:                         0
-    Carp:                          1.04
-    Cwd:                           3.12
-    Data::Dumper:                  2.121_08
-    Devel::AssertEXE:              0
-    Devel::ModInfo:                0.05
-    Devel::Symdump:                2.07
-    Exporter:                      5.58
-    ExtUtils::MakeMaker:           6.44
-    File::Basename:                2.74
-    File::Find:                    1.10
-    File::Find::Rule:              0.30
-    File::Path:                    1.08
-    Getopt::Std::Strict:           1.01
-    HTTP::Request::Common:         1.26
-    HTTP::Status:                  1.28
-    LEOCHARRE::CLI:                1.18
-    LEOCHARRE::DEBUG:              1.11
-    LWP::UserAgent:                2.033
-    Module::Info:                  0.3
-    Net::FTP:                      2.75
-    Smart::Comments:               1.0.2
-    Term::ReadKey:                 2.30
-    Test2:                         0
-    Test::Simple:                  0.8
-    WWW::CPAN:                     0.011
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    AppConfig::Std:       1.07
+    Carp:                 1
+    Cwd:                  3
+    Data::Dumper:         2.121_02
+    Devel::ModInfo:       0.05
+    Devel::Symdump:       2.0602
+    Exporter:             5
+    ExtUtils::MakeMaker:  6
+    File::Basename:       2.73
+    File::Find:           1.07
+    File::Find::Rule:     0.30
+    File::Path:           1.06
+    Getopt::Std::Strict:  1.01
+    HTTP::Request::Common:  1.26
+    HTTP::Status:         1.28
+    LEOCHARRE::CLI:       1.19
+    LEOCHARRE::DEBUG:     1.12
+    LWP::UserAgent:       2.033
+    Module::Info:         0.31
+    Net::FTP:             2.75
+    Smart::Comments:      1
+    Term::ReadKey:        2.30
+    Test::Simple:         0
+    WWW::CPAN:            0.011
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
