@@ -1,0 +1,20 @@
+LEOCHARRE::Dev
+This distro is a set of tools to help me manage a distro- and development.
+It is in my namespace because a lot of the scripts and methods here are already available in other packages.
+
+I find these set of tools very valuable.
+
+For example, 
+
+   - automatically generate pod from source
+   - analize your distro and tell what modules are deps and what versions are currently installed
+   - auto Makefile.PL and MANIFEST generation
+   - check out what version of a module is installed and if it's the most current on cpan
+   - etc
+
+To install
+
+   perl Makefile.PL
+   make install
+
+
